--- a/AlquilaCar/package.json
+++ b/AlquilaCar/package.json
@@ -26,7 +26,9 @@
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "firebase": "^4.7.0",
+    "handlebars": "^4.0.11",
     "jquery": "^3.2.1",
+    "npm": "^5.5.1",
     "popper.js": "^1.13.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
