--- a/AlquilaCar/package.json
+++ b/AlquilaCar/package.json
@@ -23,9 +23,10 @@
     "@angular/platform-server": "^5.1.0-beta.2",
     "@angular/router": "^5.1.0-beta.2",
     "angularfire2": "^5.0.0-rc.4",
-    "bootstrap": "^4.0.0-beta.2",
+    "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "firebase": "^4.7.0",
+    "firebase-admin": "^5.5.1",
     "handlebars": "^4.0.11",
     "jquery": "^3.2.1",
     "npm": "^5.5.1",
