--- a/AlquilaCar/package.json
+++ b/AlquilaCar/package.json
@@ -30,6 +30,7 @@
     "handlebars": "^4.0.11",
     "jquery": "^3.2.1",
     "npm": "^5.5.1",
+    "open-iconic": "^1.1.1",
     "popper.js": "^1.13.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
