--- a/AlquilaCar/package.json
+++ b/AlquilaCar/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.1.0-beta.2",
     "@angular/platform-server": "^5.1.0-beta.2",
     "@angular/router": "^5.1.0-beta.2",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.8",
     "angularfire2": "^5.0.0-rc.4",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
